# cmake-lib-and-compile-options

./: CMakeLists.txt  HelloWorld.cpp
